renamed scss file to style.scss, updated component links

--- a/docs/_includes/foot.html
+++ b/docs/_includes/foot.html
@@ -5,8 +5,8 @@
       {% assign location = "http://localhost:4011" %}
     {% endif %}
   {% endcomment %}
-  <link rel="stylesheet" href="{{ location }}/sass/toolbox-selector.css">
-  <link rel="stylesheet" href="{{ location }}/sass/toolbox-selector-draggable.css">
+  <link rel="stylesheet" href="{{ location }}/sass/style.css">
+  <link rel="stylesheet" href="{{ location }}/sass/style-draggable.css">
   <script type="text/javascript" src="{{location}}/scripts/components/toolbox-selector.js"></script>
 
 {% comment %} field {% endcomment %}
@@ -16,7 +16,7 @@
       {% assign location = "http://localhost:4013" %}
     {% endif %}
   {% endcomment %}
-  <link rel="stylesheet" href="{{ location }}/sass/toolbox-field.css">
+  <link rel="stylesheet" href="{{ location }}/sass/style.css">
   <script type="text/javascript" src="{{location}}/scripts/components/toolbox-field.js"></script>
 
 {% comment %} table {% endcomment %}
@@ -26,4 +26,4 @@
       {% assign location = "http://localhost:4014" %}
     {% endif %}
   {% endcomment %}
-  <link rel="stylesheet" href="{{ location }}/sass/toolbox-table.css">
+  <link rel="stylesheet" href="{{ location }}/sass/style.css">
