--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -8,4 +8,4 @@
 
 
 {% include default-css.html  %}
-<link rel="stylesheet" href="{{ site.baseurl }}/sass/toolbox-modal.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/sass/style.css">
